--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 # Header
-navname: Bentham's Blog
+navname: WzZH's Blog
 
 # navigatior items
 nav:
-  Posts: /archives
-  Categories: /category
-  Tags: /tag
-  About: /about
+  文章: /archives
+  分类: /category
+  标签: /tag
+  关于: /about
 
 # favicon
-favicon: /favicon.ico
+favicon: https://cdn.jsdelivr.net/gh/Hide927/BlogImages@main/img/202209231557635.jpg
 
 # Profile
-nickname: Jeremy Bentham
+nickname: WzZH
 
 ### this variable is MarkDown form.
-description: Lorem ipsum dolor sit amet, **consectetur adipiscing elit.** <br>Fusce eget urna vitae velit *eleifend interdum at ac* nisi.
-avatar: /image/avatar.jpeg
+description: 滔滔不绝很容易，可我只想和你在一个慢下来的世界交谈。
+avatar: https://cdn.jsdelivr.net/gh/Hide927/BlogImages@main/img/202209231557635.jpg
 
 # main menu navigation
 ## links key words should not be changed.
@@ -24,6 +24,7 @@ avatar: /image/avatar.jpeg
 ## Unused key can be commented out.
 links:
   Blog: /archives
+  Youxiang: mailto:wangzihang927@foxmail.com
   # Category:
   # Tags: 
   # Link:
@@ -33,23 +34,23 @@ links:
   # Gallery:
   # RSS:
   # AliPay:
-  ZhiHu: https://www.zhihu.com/people/sirice
   # LinkedIn:
   # FaceBook:
-  # Twitter:
+  Github: https://github.com/Hide927
+  Twitter: https://twitter.com/Wonderful927
   # Skype:
   # CodeSandBox:
   # CodePen:
   # Sketch:
   # Gitlab:
   # Dribbble:
-  Instagram:
-  Reddit:
+  # Instagram:
+  # Reddit:
   # YouTube:
   # QQ:
-  # Weibo:
+  ZhiHu: https://www.zhihu.com/people/wei-xiao-ci-ke-89
+  Weibo: https://weibo.com/u/6361743068
   # WeChat:
-  Github: https://github.com/Siricee
 
 # how links show: you have 2 choice--text or icon.
 links_text_enable: false
@@ -59,18 +60,20 @@ links_icon_enable: true
 ## Post_meta
 post_meta_enable: true
 
-post_author_enable: true
+post_author_enable: false
 post_date_enable: true
+post_updated_enable: true
 post_category_enable: true
+post_view_counter_enable: true
 ## Post copyright
 post_copyright_enable: true
 
 post_copyright_author_enable: true
 post_copyright_permalink_enable: true
 post_copyright_license_enable: true
-post_copyright_license_text: Copyright (c) 2019 <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC-BY-NC-4.0</a> LICENSE
-post_copyright_slogan_enable: true
-post_copyright_slogan_text: Do you believe in <strong>DESTINY</strong>?
+post_copyright_license_text: 本博客所有文章除特别声明外，均采用 <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC-BY-NC-SA-4.0</a> 许可协议。转载请注明出处！
+post_copyright_slogan_enable: false
+post_copyright_slogan_text: Why so serious?
 ## toc
 post_toc_enable: true
 
@@ -81,8 +84,8 @@ page_title_enable: true
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
-date_format: MMMM D, YYYY
-time_format: H:mm:ss
+date_format: YYYY-MM-DD
+time_format: HH:mm:ss
 
 # stylesheets loaded in the <head>
 stylesheets:
@@ -94,7 +97,8 @@ scripts:
   - /js/tocbot.min.js
     # tscanlin/tocbot: Build a table of contents from headings in an HTML document.
     # https://github.com/tscanlin/tocbot
-
+  - https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js
+  - /js/codecopy.js
 
 # plugin functions
 ## Mathjax: Math Formula Support
@@ -104,3 +108,15 @@ mathjax:
   import: demand # global or demand
   ## global: all pages will load mathjax,this will degrade performance and some grammers may be parsed wrong.
   ## demand: Recommend option,if your post need fomula, you can declare 'mathjax: true' in Front-matter
+
+# since year
+since_year: 2021
+
+# waline comments
+waline:
+  enable: true
+
+# site view counter
+visit_counter: 
+  site_uv: true
+  site_pv: true
