update personal config

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ nav:
   关于: /about
 
 # favicon
-favicon: https://cdn.jsdelivr.net/gh/Hide927/BlogImages@main/img/202209231557635.jpg
+favicon: https://cdn.jsdelivr.net/gh/Hide927/BlogImages@main/img/202210251929294.png
 
 # Profile
 nickname: WzZH
