--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ favicon: https://jihulab.com/Hide927/blogimages/-/raw/main/pictures/202210292140
 nickname: WzZH
 
 ### this variable is MarkDown form.
-description: 滔滔不绝很容易，可我只想和你在一个慢下来的世界交谈。
+description: Accept who you are but never settle for what you can be.
 avatar: https://jihulab.com/Hide927/blogimages/-/raw/main/pictures/202210292140887.png
 
 # main menu navigation
