--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ favicon: https://jihulab.com/Hide927/blogimages/-/raw/main/pictures/202210292140
 nickname: WzZH
 
 ### this variable is MarkDown form.
-description: Accept who you are but never settle for what you can be.
+description: 对着这个世界就是 bang bang 两拳。
 avatar: https://jihulab.com/Hide927/blogimages/-/raw/main/pictures/202210292140887.png
 
 # main menu navigation
